# piper-vision-grasp-new

./: .gitignore  CHANGELOG(ZH).MD  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.MD  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml  rm_tmp.sh  setup.py
.github/workflows/: ci.yml
apps/: calibrate_handeye.py  calibrate_intrinsics.py  capture_keypoints.py  click_pick_demo.py  drag_monitor_gui.py  estimate_tcp_offset.py  teleop_tcp_gui.py  teleop_tcp_keyboard.py  validate_handeye.py
assets/calibration/charuco_default/: README.md  charuco_board.yaml
configs/calibration/: default.yaml
configs/camera/: d405_default.yaml
configs/robot/: piper_default.yaml
configs/task/: pick_demo_default.yaml  pick_demo_template.yaml
configs/teleop/: default.yaml
docs/: README.md  README.zh-CN.md  can_user(EN).MD  can_user.MD  handeye.md  installation.md  keypoints.md  onboarding.md  onboarding.zh-CN.md  pick_demo.md  quickstart.md  quickstart.zh-CN.md  reproduce_checklist.md  reproduce_checklist.zh-CN.md  setup.md  tcp_offset.md  teleop.md  wsl2_usb_can_guide.md  yolo_target_pick_demo.md  yolo_target_pick_demo.zh-CN.md
docs/effector/agx_gripper/: agx_gripper-API使用文档.MD  agx_gripper_api.md
docs/effector/revo2/: revo2-API使用文档.MD  revo2_api.md
docs/nero/: First-TimeUserGuide(CAN).MD  first_time_user_guide_can.md  nero-API使用文档.MD  nero_api.md
docs/piper/: piper-API使用文档.MD  piper_api.md
patches/pyagxarm/: README.md
pyAgxArm/: __init__.py  __init__.pyi  version.py
pyAgxArm/api/: __init__.py  __init__.pyi  agx_arm_factory.py  agx_arm_factory.pyi  arm_options.py  constants.py
pyAgxArm/configs/: mdh_modified.json  nero.json  piper.json  piper_h.json  piper_l.json  piper_x.json
pyAgxArm/demos/: detect_arm.py  detect_nero_series.py
pyAgxArm/demos/nero/: test1.py
pyAgxArm/demos/piper/: test1.py
pyAgxArm/demos/piper_h/: test1.py
pyAgxArm/demos/piper_l/: test1.py
pyAgxArm/demos/piper_x/: test1.py
pyAgxArm/extensions/: arm_fk.py
pyAgxArm/protocols/can_protocol/comms/: __init__.py  can_comm.py  comm_factory.py
pyAgxArm/protocols/can_protocol/comms/can_send/: Makefile  __init__.py  can_send_.py
pyAgxArm/protocols/can_protocol/comms/can_sys_utils/: base_util.py  linux_util.py
pyAgxArm/protocols/can_protocol/comms/core/: can_comm_base.py  comm_abstract.py  comm_interface.py
pyAgxArm/protocols/can_protocol/drivers/: __init__.py
pyAgxArm/protocols/can_protocol/drivers/core/: __init__.py  arm_driver_abstract.py  arm_driver_context.py  arm_driver_interface.py  driver_context.py  effector_driver_context.py  protocol_parser_abstract.py  submodel_driver_context_interface.py  table_driven.py
pyAgxArm/protocols/can_protocol/drivers/nero/: __init__.py
pyAgxArm/scripts/linux/: can_activate.sh
pyAgxArm/utiles/: logger_mag.py  numeric_codec.py  tf.py
scripts/: bringup_can.sh  run_calibrate_handeye.sh  run_calibrate_intrinsics.sh  run_capture_keypoints.sh  run_click_pick_demo.sh  run_doctor.sh  run_estimate_tcp_offset.sh  run_gui.sh  run_keyboard.sh  run_monitor.sh  run_validate_handeye.sh  run_yolo_target_pick_demo.sh  setup_env.sh
src/piper_app/: __init__.py  config.py
src/piper_app/calibration/: charuco.py  gui_handeye.py  gui_intrinsics.py  gui_validate.py  handeye.py  intrinsics.py  session.py  transforms.py  validation.py  viewer_base.py
src/piper_app/camera/: __init__.py  d405.py
src/piper_app/cli/: __init__.py  calibrate_handeye.py  calibrate_intrinsics.py  capture_keypoints.py  click_pick_demo.py  drag_monitor_gui.py  estimate_tcp_offset.py  teleop_tcp_gui.py  teleop_tcp_keyboard.py  validate_handeye.py  yolo_target_pick_demo.py
src/piper_app/keypoints/: gui.py  store.py
src/piper_app/monitor/: __init__.py  gui.py
src/piper_app/perception/: __init__.py  yolo.py
src/piper_app/pick_demo/: gui.py  task.py
src/piper_app/robot/: __init__.py  client.py  factory.py  safety.py
src/piper_app/tcp_offset/: estimate.py  gui.py
src/piper_app/teleop/: __init__.py  gripper.py  gui.py  keyboard.py
src/piper_app/yolo_target_pick_demo/: gui.py
tests/: API_COVERAGE.md  conftest.py  test_agx_gripper_virtual_can.py  test_factory_config.py  test_imports.py  test_nero_driver_virtual_can.py  test_revo2_virtual_can.py
tests/slaves/: agx_gripper_can_slave.py  nero_can_slave.py
(+73 files in other folders)
