[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-app"
version = "0.1.0"
description = "Application-layer tooling for Piper robotic arms built on top of vendored pyAgxArm."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=2.0",
    "Pillow>=12.0",
    "PyYAML>=6.0",
    "pyrealsense2==2.56.5.9235",
]

[project.scripts]
piper-drag-monitor-gui = "piper_app.cli.drag_monitor_gui:main"
piper-teleop-gui = "piper_app.cli.teleop_tcp_gui:main"
piper-teleop-keyboard = "piper_app.cli.teleop_tcp_keyboard:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
