[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-vision-grasp-new"
version = "0.1.0"
description = "Eye-in-hand vision grasping workspace for Piper robots built on top of vendored pyAgxArm and YOLO."
readme = "README.md"
requires-python = ">=3.10,<3.11"
keywords = ["piper", "robotics", "vision", "grasping", "realsense", "yolo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "matplotlib>=3.4",
    "numpy>=2.0",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pandas>=1.1.4",
    "Pillow>=12.0",
    "psutil>=5.9",
    "py-cpuinfo>=9.0.0",
    "PyYAML>=6.0",
    "pyrealsense2==2.56.5.9235",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.64.0",
    "ultralytics>=8.4.39",
    "ultralytics-thop>=2.0.18",
]

[project.urls]
Homepage = "https://github.com/xsb2lyang/piper-vision-grasp-new"
Repository = "https://github.com/xsb2lyang/piper-vision-grasp-new"
Issues = "https://github.com/xsb2lyang/piper-vision-grasp-new/issues"

[project.scripts]
piper-calibrate-handeye = "piper_app.cli.calibrate_handeye:main"
piper-calibrate-intrinsics = "piper_app.cli.calibrate_intrinsics:main"
piper-capture-keypoints = "piper_app.cli.capture_keypoints:main"
piper-click-pick-demo = "piper_app.cli.click_pick_demo:main"
piper-estimate-tcp-offset = "piper_app.cli.estimate_tcp_offset:main"
piper-validate-handeye = "piper_app.cli.validate_handeye:main"
piper-drag-monitor-gui = "piper_app.cli.drag_monitor_gui:main"
piper-teleop-gui = "piper_app.cli.teleop_tcp_gui:main"
piper-teleop-keyboard = "piper_app.cli.teleop_tcp_keyboard:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
